syntax = "proto3";

package api.Api.v1;

option go_package = "fkratos/api/api/v1;v1";

import "google/api/annotations.proto";
// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply


// 用户服务
service Api {
  //创建用户
  rpc CreateApi (CreateApiReq) returns (CreateApiReply){
    option (google.api.http) = {
      post: "/api/v1/createApi"
      body: "*"
    };
  };
  //更新用户
  rpc UpdateApi (UpdateApiReq) returns (UpdateApiReply){
    option (google.api.http) = {
      put: "/api/v1/updateApi"
      body: "apiInfo"
    };
  };
  //删除用户
  rpc DeleteApi (DeleteApiReq) returns (DeleteApiReply){
    option (google.api.http) = {
      delete: "/api/v1/deleteApi"
    };
  };
  //获取单个用户
  rpc GetApi (GetApiReq) returns (GetApiReply){
    option (google.api.http) = {
      get: "/api/v1/getApi"
    };
  };
  //获取用户列表
  rpc ListApi (ListApiReq) returns (ListApiReply){
    option (google.api.http) = {
      get: "/api/v1/listApi"
    };
  };
}
message ApiInfo{

}
//请求-创建用户
message CreateApiReq {}
//响应-创建用户
message CreateApiReply {}
//请求-更新用户
message UpdateApiReq {
  ApiInfo apiInfo = 1;
}
//响应-更新用户
message UpdateApiReply {

}
//请求-删除用户
message DeleteApiReq {}
//响应-删除用户
message DeleteApiReply {}
//请求-获取单个用户
message GetApiReq {}
//响应-获取单个用户
message GetApiReply {}
//请求-获取用户列表
message ListApiReq {}
//响应-获取用户列表
message ListApiReply {}